--- a/css/estilo.css
+++ b/css/estilo.css
@@ -82,13 +82,6 @@ p {
   width: 100%;
 }
 
-@media (max-width:600px) {
-  .header-menu a {
-    font-size: 30px;
-    background-color: #DA327B;
-  }
-}
-
 /* Introducao */
 .introducao-conteudo {
   margin: 60px auto;
@@ -147,4 +140,26 @@ p {
   text-align: center;
   color: #ECE755;
   font-weight: bold;
+}
+
+@media (max-width: 800px) {
+  .header {
+   display: flex;
+   justify-content: center;
+  }
+  .logotipo {
+    width: 250px;
+  }
+  .header-menu a {
+    font-size: 19px;
+  }
+  .titulo {
+    font-size: 30px;
+  }
+  .introducao-conteudo p {
+    font-size: 15px;
+    width: 300px;
+    display: inline-block;
+    line-height: 1.5;
+  }
 }
